--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta http-equiv="X-UA-compatible"content="ie=edge">
-        <title>document</title>
-        <link rel="stylesheet" href="main.css">
-
-
-    </head>
-    <body>
-        <div>
-        <img class= "images" src="">
-        <button type="button" class="btn prevBtn">previous Button</button>
-        <button type="button" class="btn nextBtn">next Button</button>
-        
-</div>
-        <script src="script.js"></script>
-    </body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>weather</title><link href=/css/app.da5a2b74.css rel=preload as=style><link href=/js/app.433e98d2.js rel=preload as=script><link href=/js/chunk-vendors.5d2dd1a9.js rel=preload as=script><link href=/css/app.da5a2b74.css rel=stylesheet></head><body><noscript><strong>We're sorry but weather doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.5d2dd1a9.js></script><script src=/js/app.433e98d2.js></script></body></html>
